2019-12-16  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/endflib.cpp (ENDFWriteRecord): updated
	argument of ENDFWriteRecord changed from pointer
	to actual Record object

2019-12-15  KAWANO Toshihiko  <kawano@lanl.gov>

	* tools/deceheader.cpp: new file
	tool to patch text data in the header part

2019-09-23  Toshihiko KAWANO  <kawano@lanl.gov>

	* example/example3.cpp: new file
	new example, which uses ENDFDict object

	* source/endflib.cpp (ENDFWriteTPID): new function
	print TPID in Dict

2019-09-22  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/deceoutput.cpp (DeceRenumber): modified
	* source/deceheader.cpp (DeceShowHeaders): new function
	(DeceEditHeader): new function
	print and modify parameters in header part
	new commands, showheaders and editheader, added

2019-08-28  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/decetable2.cpp (DeceTableMF2RR7): bug fixed
	parity output fixed

	* source/gfrcs7.cpp (gfrRMatrixLimited): bug fixed
	capture channel index fixed 

2019-08-07  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/deceglobaloption.cpp (optionSet): modified
	* source/global.h (class GlobalOption): modified
	angle step less than one allowed

	* source/decetable4.cpp (decetable4LEG): modified
	* source/decetable6.cpp (DeceTableMF6Law2): modified
	reconstruct angular distributions from Legendre coefficients
 
2019-07-17  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/decepoint.cpp (addpoint): bug fixed
	problem in ENDFLibCopy called after del/add-point

2019-05-20  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/matrix.cpp (MatrixInverse1): modified
	gcc8 hack

	* source/decescanindex.cpp (DeceScanIndex): modified
	* source/dece.cpp (DeceStoreData): bug fixed
	change in decescanindex created a side effect of deceoutput
	older file recovered

2019-05-14  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/dece.cpp (DeceStoreData): modified
	MF32, 34, and 35 activated

	* source/endflib.cpp (ENDFMF2boundary): modified
	bug reported by HIK