@@ -8,13 +8,13 @@
 <body>
 
 <h1><a name = "top"> The Descriptive Correction of ENDF-6 Format Code </a><br/>
-     DeCE (Pyrite) Manual </h1>
+     DeCE (Rutile) Manual </h1>
 
 <p style="text-align:center;">
 <img src="DeCE.png" width="340" height="320" alt="DeCE Logo" title="DeCE" style="margin-top:20px;margin-bottom:20px;padding:0px;"/>
 </p>
 
-<p style="text-align:center;"> September 22 (2019) </p>
+<p style="text-align:center;"> December 19 (2019) </p>
 <p style="text-align:right;"> Kawano Toshihiko </p>
 <p style="text-align:right;"> Los Alamos National Laboratory </p>
 
@@ -184,6 +184,12 @@
         </ul>
     <li> <a href="endfio.html">
          ENDF-6 Data Read/Write</a>
+
+    <li> <a href="function1.html">
+         ENDFLIB Functions</a>
+
+    <li> <a href="function2.html">
+         ENDFIO Functions</a>
     </ul>
 </ul>
 
@@ -239,8 +245,8 @@ They are known as "the Mohs scale of mineral hardness." The code was
 originally developed as a program <tt>E-Type</tt>, which was a
 converter program from the Hauser-Feshbach model code output into the
 ENDF-6 formatted data, first appeared in Summer 2009.  This was
-totally superseded by DeCE.  The current version, built in March 2019,
-is Pyrite, whose Mohs scale is 6 - 6.5.</p>
+totally superseded by DeCE.  The current version, first built in Dec. 2019,
+is Rutile, whose Mohs scale is 6 - 6.5.</p>
 
 <p>All versions up to DeCE (Fluorite) were just for the author's
 private use. Apatite is the first version of outside release (yet
@@ -250,7 +256,8 @@ bug fixes. Adularia, which was built in 2015, has several upgrades in
 the resonance region. DeCE was released as open source software in
 2016. In 2019 the source code was re-organized aiming at better
 readability, and released as the version Pyrite. Some test cases are
-also provided in this version.</p>
+also provided in this version. In winter in the same year, some minor
+updates were made, and released as the version Rutile. </p>
 
 
 <h2><a name="reference"> Reference </a></h2>
